--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 exposed-version = "0.57.0"
+jooq-version = "3.19.16"
 jave-version = "3.5.0"
 kotlin-version = "2.1.0"
 ktor-version = "3.0.2"
-logback-version = "1.5.15"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin-version" }
@@ -12,12 +12,15 @@ serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref 
 
 [libraries]
 exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed-version" }
+exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed-version" }
 jave = { module = "ws.schild:jave-core", version.ref = "jave-version" }
 jave-native-linux = { module = "ws.schild:jave-nativebin-linux64", version.ref = "jave-version" }
 jave-native-win = { module = "ws.schild:jave-nativebin-win64", version.ref = "jave-version" }
+jooq = { module = "org.jooq:jooq", version.ref = "jooq-version" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin-version" }
-logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-version" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version = "1.5.15" }
 moshi = { module = "com.squareup.moshi:moshi-kotlin", version = "1.15.2" }
+postgresql = { module = "org.postgresql:postgresql", version = "42.7.4" }
 
 server-config-yaml = { module = "io.ktor:ktor-server-config-yaml-jvm", version.ref = "ktor-version" }
 server-core = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor-version" }
