--- a/docker/db/Dockerfile
+++ b/docker/db/Dockerfile
@@ -3,4 +3,4 @@ FROM postgres:latest
 ENV POSTGRES_DB="enshittify"
 ENV POSTGRES_PASSWORD="1234"
 
-# COPY enshittify.sql /docker-entrypoint-initdb.d/
+COPY enshittify.sql /docker-entrypoint-initdb.d/
